# paputapp

./: CLAUDE.md  README.md  pyproject.toml
src/: database.db  main.py
src/templates/: dashboard.html  index.html
tests/: conftest.py  test_main.py
