[project]
name = "paput-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djlint>=1.36.4",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "selenium>=4.43.0",
    "sqlmodel>=0.0.38",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]